# bun-js-beforeparse

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  index.d.ts  index.js  package.json  tsconfig.json
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
__test__/: basic.test.ts  integration.ts
js/: index.ts
src/: lib.rs
